EBEAST: adjust webkit-scrollbar to match dark theme
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/index.html
+++ b/ebeast/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <div style="margin: 1em auto; display: table">
+  <div style="margin: 1em auto; overflow: auto; max-height: 100%; max-width: 100%;">
     <h1 style="float:right; margin-top: 0">BEAST/BSE</h1>
     <style>
      table.version-table th { text-align: right; padding-right: .5em; }
