EBEAST: integrate jQuery 3.1.1.
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/index.html
+++ b/ebeast/index.html
@@ -13,6 +13,7 @@
     const Electron = require ('electron').remote;
     const Bse = require ('./v8bse/v8bse.node');
     const Mithril = require ('mithril');
+    window.$ = window.jQuery = require ('jquery');
   </script>
 
   <div style="margin: 1em auto; overflow: auto; max-height: 100%; max-width: 100%;">
