EBEAST: show About dialog on Help » About...
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/index.html
+++ b/ebeast/index.html
@@ -16,7 +16,7 @@
     const Menus = require ('./menus.js');
     0 + Menus; // FIXME 'unused' warnings
     const App = {
-      show_about: true,
+      show_about: false,
       __proto__ : Electron.app
     };
     Object.preventExtensions (App);
