EBEAST: build and include objects/vc-bundle.js from vc/bundle.js
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/index.html
+++ b/ebeast/index.html
@@ -5,6 +5,8 @@
 
   <link rel="stylesheet" href="objects/app.css">
 
+  <script src="objects/vc-includes.js">/* Vue + compoentns */</script>
+
   <script>
     'use strict';
     /* Load application code right away, start application once DOM is ready */
