EBEAST: window: add comment about setting the zoom factor
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -24,6 +24,7 @@
       if (event.shiftKey && event.ctrlKey && code == 82) // Shift+Ctrl+R
 	window.location.reload();
     });
+  // Electron.getCurrentWindow().webContents.setZoomFactor(1)
   </script>
 
 </head>
