--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -40,6 +40,14 @@
   Vue.mixin ({ beforeCreate: function () {
     if (!this.$options.data && this.$options.data_tmpl)
       this.$options.data = Object.assign ({}, this.$options.data_tmpl);
+    if (this.$options.customized_render && this.$options.render && !this.$options.render.mixin_customized_render) {
+      const render = this.$options.render, customized_render = this.$options.customized_render;
+      this.$options.render = function (createElement) {
+	const element = render.call (this, createElement);
+	return customized_render.call (this, createElement, element);
+      };
+      this.$options.render.mixin_customized_render = true;
+    }
   } });
   // Create Vue AppWindow singleton
   window.App = new require ('./app.js').VueAppWindow ({});
