--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -15,6 +15,8 @@
   require ('./vc/includes.js');
   Vue.config.productionTip = false;
   Vue.config.silent = !HAVE_DEVELOPMENT_TOOLS;
+  const MAXINT = 2147483647, MAXUINT = 4294967295;
+  { MAXINT; MAXUINT; } // used
   // show DevTools on hotkey
   if (HAVE_DEVELOPMENT_TOOLS)
     document.addEventListener ("keydown", (event) => {
