EBEAST: fix menubar setup
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -74,6 +74,10 @@
     });
     assert (vue_mountpoint); // unused
   }
+  { // setup menubar
+    const menus = require ('./menus.js');
+    Electron.Menu.setApplicationMenu (menus.build_menubar());
+  }
   </script>
 
 </body>
