EBEAST: window.html: minor comment fix
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -58,7 +58,7 @@
       el:   '#vue-mountpoint',
       data: { Shell: shell_placeholder },
     });
-    assert (vue_mountpoint); // unused
+    assert (vue_mountpoint); // $root
   }
   { // setup menubar
     const menus = require ('./menus.js');
