EBEAST: window.html: move includes.js initializations here
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -7,17 +7,30 @@
 
   <script> /* Load Electron, Bse, Vue, setup DevTools and Util */
   'use strict';
-  window.Electron = require ('electron').remote;
+  const assert = console.assert;
+  // load Electronjs utilities
+  const Electron = require ('electron').remote;
+  // provide global constants
+  const MAXINT = 2147483647, MAXUINT = 4294967295;
+  { MAXINT; MAXUINT; } // linter: not unused
   const HAVE_DEVELOPMENT_TOOLS = Electron.getCurrentWindow().HAVE_DEVELOPMENT_TOOLS;
   window.BEASTDIR = __dirname + '/../../'; // $prefix/beast-$VESION/bundle/app/../../
-  window.Bse = require ('./assets/v8bse.node'); // adding '/' avoids node_modules/-relative lookup
-  window.T = (txt) => { return txt; };   // translation indicator
-  // Load jQuery + utils + Vue + components
-  require ('./vc/includes.js');
+  // pull in jQuery
+  console.assert (window.jQuery === undefined);
+  const $ = require ('jquery');
+  window.$ = window.jQuery = $;
+  // initialize BSE plus binding
+  const Bse = require ('./assets/v8bse.node'); // adding './' avoids node_modules/-relative lookup
+  const T = (txt) => { return txt; };   // translation indicator
+  { Bse; T; } // linter: not unused
+  // load and configure Vue
+  console.assert (window.Vue === undefined);
+  const Vue = require ('vue/dist/vue.common.js');
+  window.Vue = Vue;
   Vue.config.productionTip = false;
   Vue.config.silent = !HAVE_DEVELOPMENT_TOOLS;
-  const MAXINT = 2147483647, MAXUINT = 4294967295;
-  { MAXINT; MAXUINT; } // used
+  // load Vue components, bundled via vc/bundle.js
+  require ('./assets/components.js'); // adding './' avoids node_modules/-relative lookup
   // show DevTools on hotkey
   if (HAVE_DEVELOPMENT_TOOLS)
     document.addEventListener ("keydown", (event) => {
@@ -28,12 +41,6 @@
 	window.location.reload();
       // Electron.getCurrentWindow().webContents.setZoomFactor (1);
     });
-  // Utilities
-  {
-    const Util = require ('./vc/utilities.js');
-    window.assert = Util.assert;
-    Vue.mixin (Util.vue_mixins.data_tmpl); // Allow automatic `data` construction (cloning) from `data_tmpl`
-  }
   </script>
 
 </head>
