--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -34,14 +34,15 @@
   window.$ = window.jQuery = $;
   // initialize BSE plus binding
   const Bse = require ('./assets/v8bse.node'); // adding './' avoids node_modules/-relative lookup
-  const T = (txt) => { return txt; };   // translation indicator
-  { Bse; T; } // linter: not unused
+  const _ = (txt) => { return Bse.server.gettext (txt); };   // translation indicator
+  { Bse; _; } // linter: not unused
   // load and configure Vue
   console.assert (window.Vue === undefined);
   const Vue = require ('vue/dist/vue.common.js');
   window.Vue = Vue;
   Vue.config.productionTip = false;
   Vue.config.silent = !HAVE_DEVELOPMENT_TOOLS;
+  Vue.prototype._ = _;
   // load Vue components, bundled via vc/bundle.js
   require ('./assets/components.js'); // adding './' avoids node_modules/-relative lookup
   // show DevTools on hotkey
