EBEAST: Makefile.mk: create $>/electron/ebeast and builds the ebeast app in $>/app/
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -45,7 +45,7 @@
       // Electron.getCurrentWindow().webContents.setZoomFactor (1);
     });
 
-  window.BEASTDIR = __dirname + '/../../'; // $prefix/beast-$VESION/bundle/app/../../
+  window.BEASTDIR = __dirname + '/../'; // $prefix/beast-$VESION/app/../
   // pull in jQuery
   console.assert (window.jQuery === undefined);
   const $ = require ('jquery');
