EBEAST: provide Util globally instead of needing multiple includes
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -46,6 +46,7 @@
     });
 
   window.BEASTDIR = __dirname + '/../'; // $prefix/beast-$VESION/app/../
+  const Util = require ('./assets/utilities.js');
   // pull in jQuery
   console.assert (window.jQuery === undefined);
   const $ = require ('jquery');
