EBEAST: integrate a "Preferences..." dialog
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -72,6 +72,7 @@
   <div id="vue-mountpoint">
     <vc-projectshell ref="Vue-prototype-Shell" ></vc-projectshell>
     <vc-aboutdialog v-if="Shell.show_about_dialog" @close="Shell.show_about_dialog = false"></vc-aboutdialog>
+    <vc-preferencesdialog v-if="Shell.show_preferences_dialog" @close="Shell.show_preferences_dialog = false"></vc-preferencesdialog>
   </div>
 
   <script>
@@ -81,6 +82,7 @@
     // App.Shell placeholder until the Shell VueComponent is created
     const shell_placeholder = {
       show_about_dialog: false,
+      show_preferences_dialog: false,
       Shell_placeholder: true		// flag causing replacement later on
     };
     // Create Vue root instance, which immediately creates Shell
