EBEAST: menus.js: add 'save-same' and support disabled menu items
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -102,7 +102,7 @@
   }
   { // setup menubar
     const menus = require ('./menus.js');
-    Electron.Menu.setApplicationMenu (menus.build_menubar());
+    menus.setup_app_menu();
   }
   </script>
 
