EBEAST: Makefile.mk: provide woff2 and CSS from material-icons-190326.1
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -4,6 +4,7 @@
   <title>Beast - Music Synthesizer and Composer</title>
 
   <link rel="stylesheet" href="assets/stylesheets.css">
+  <link rel="stylesheet" href="assets/material-icons.css">
 
   <script> /* Load Electron, Bse, Vue, setup DevTools and Util */
   'use strict';
