EBEAST: Makefile.mk: provide the Fork-Awesome-1.1.7 woff2 and CSS files
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -5,6 +5,7 @@
 
   <link rel="stylesheet" href="assets/stylesheets.css">
   <link rel="stylesheet" href="assets/material-icons.css">
+  <link rel="stylesheet" href="assets/forkawesome-webfont.css">
 
   <script> /* Load Electron, Bse, Vue, setup DevTools and Util */
   'use strict';
