EBEAST: window.html: fix Vue / utilities dependency and provide $log
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -48,7 +48,6 @@
     });
 
   window.BEASTDIR = __dirname + '/../'; // $prefix/beast-$VESION/app/../
-  const Util = require ('./assets/utilities.js');
   // pull in jQuery
   console.assert (window.jQuery === undefined);
   const $ = require ('jquery');
@@ -65,8 +64,13 @@
   Vue.config.silent = !HAVE_DEVELOPMENT_TOOLS;
   Vue.config.devtools = false; // prevent warning about VUEJS_DEVTOOLS missing
   Vue.prototype._ = _;
+  // install utilities, some are needed by Vue components
+  const Util = require ('./assets/utilities.js');
   // load Vue components, bundled via b/bundle.js
   require ('./assets/components.js'); // adding './' avoids node_modules/-relative lookup
+  // enable simple logging everywhere
+  window.$log = console.log.bind (console);
+  Vue.prototype.$log = window.$log;
   </script>
 
 </head>
