EBEAST: remove electron-devtools-installer/VUEJS_DEVTOOLS which causes crashes
Installing VUEJS_DEVTOOLS via electron-devtools-installer 2.2.4 causes
segfaults in electron 3, 4 and occasionally 5.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -63,6 +63,7 @@
   window.Vue = Vue;
   Vue.config.productionTip = false;
   Vue.config.silent = !HAVE_DEVELOPMENT_TOOLS;
+  Vue.config.devtools = false; // prevent warning about VUEJS_DEVTOOLS missing
   Vue.prototype._ = _;
   // load Vue components, bundled via b/bundle.js
   require ('./assets/components.js'); // adding './' avoids node_modules/-relative lookup
