EBEAST: window.html: load BSE files from the command line
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -111,6 +111,14 @@
     const menus = require ('./menus.js');
     menus.setup_app_menu();
   }
+  // load args
+  for (let arg of Electron.getCurrentWindow().bse_argv)
+    {
+      if (Shell.load_project (arg) == Bse.Error.NONE)
+	;
+      else
+	console.error ('Failed to load:', arg);
+    }
   </script>
 
 </body>
