EBEAST: window.html: fix argument processing
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/window.html
+++ b/ebeast/window.html
@@ -112,7 +112,7 @@
     menus.setup_app_menu();
   }
   // load args
-  for (let arg of Electron.getCurrentWindow().bse_argv)
+  for (let arg of GLOBALCONFIG.args)
     {
       if (Shell.load_project (arg) == Bse.Error.NONE)
 	;
